resolve problem with icons on mobile

--- a/app/styles/_why.scss
+++ b/app/styles/_why.scss
@@ -120,7 +120,7 @@
 
 		&-listItem {
 			position: relative;
-			padding-top: 0px;
+			padding-top: 80px;
 		}
 
 		&-listImage {
